[fix] overflow issue

--- a/src/styles/heroBanner.css
+++ b/src/styles/heroBanner.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   background-position: center;
-  width: 100vw;
   height: 720px;
 }
 
